[gd_scene load_steps=7 format=3 uid="uid://cqlh6f3jty1as"]

[ext_resource type="Script" path="res://component/timer_group_list/timer_group_list_item_simple.gd" id="1_qpshd"]
[ext_resource type="PackedScene" uid="uid://ckia7vuewnr8q" path="res://component/timer_group_list/timer_list_item_base.tscn" id="2_81v75"]
[ext_resource type="Texture2D" uid="uid://4t2tny6ytlbx" path="res://asset/img/button-start.png" id="3_35xkq"]
[ext_resource type="Texture2D" uid="uid://cjqgy65y2xu7v" path="res://asset/img/button-start-pressed.png" id="4_xa0ln"]
[ext_resource type="Texture2D" uid="uid://cayo2wwxod65c" path="res://asset/img/button-pause.png" id="5_x5wy7"]
[ext_resource type="Texture2D" uid="uid://ux45vlcpwthj" path="res://asset/img/button-pause-pressed.png" id="6_ksrvi"]

[node name="TimerGroupListItemSimple" type="Control"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("1_qpshd")

[node name="TimerGroupListItem" parent="." instance=ExtResource("2_81v75")]
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="StoppedHBox" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="StoppedHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="StartButton" type="TextureButton" parent="StoppedHBox"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("3_35xkq")
texture_pressed = ExtResource("4_xa0ln")

[node name="RunningHBox" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="RunningHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="PauseButton" type="TextureButton" parent="RunningHBox"]
layout_mode = 2
texture_normal = ExtResource("5_x5wy7")
texture_pressed = ExtResource("6_ksrvi")

[connection signal="timer_list_item_pressed" from="TimerGroupListItem" to="." method="_on_timer_group_list_item_timer_list_item_pressed"]
[connection signal="pressed" from="StoppedHBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="RunningHBox/PauseButton" to="." method="_on_pause_button_pressed"]
